@startuml

title __KUR's Class Diagram__\n

  namespace  {
    namespace ontroller {
      class Controller.HelloController {
      }
    }
  }
  

  namespace  {
    namespace ontroller {
      class Controller.StudentWin {
      }
    }
  }
  

  namespace  {
    namespace ontroller {
      class Controller.TeacherWin {
      }
    }
  }
  

  namespace  {
    namespace om.example.kur {
      class com.example.kur.DatabaseManager {
      }
    }
  }
  

  namespace  {
    namespace om.example.kur {
      class com.example.kur.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.kur {
      class com.example.kur.StudentTask {
      }
    }
  }
  

  namespace  {
    namespace om.example.kur {
      class com.example.kur.Task {
      }
    }
  }
  

  namespace  {
    namespace ao {
      interface dao.TaskDAO {
      }
    }
  }
  

  namespace  {
    namespace ao {
      class dao.TaskDAOImpl {
      }
    }
  }
  

  Controller.StudentWin .up.|> javafx.fxml.Initializable
  Controller.StudentWin o-- com.example.kur.DatabaseManager : databaseManager
  Controller.TeacherWin .up.|> javafx.fxml.Initializable
  Controller.TeacherWin o-- com.example.kur.DatabaseManager : databaseManager
  Controller.TeacherWin o-- com.example.kur.Task : task
  Controller.TeacherWin o-- dao.TaskDAO : taskDAO
  com.example.kur.HelloApplication -up-|> javafx.application.Application
  com.example.kur.StudentTask -up-|> com.example.kur.Task
  dao.TaskDAOImpl .up.|> dao.TaskDAO
  dao.TaskDAOImpl o-- com.example.kur.DatabaseManager : databaseManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
